Initial commit: Refatorando codigo e atualizando contrato
