# src/main/java/com/openbanking/model/dto/LimiteCreditoDTO.java
@@ -1,16 +1,19 @@
 package com.openbanking.model.dto;
 
+import com.fasterxml.jackson.annotation.JsonFormat;
+import lombok.AllArgsConstructor;
 import lombok.Data;
+import lombok.Getter;
 
 import java.math.BigDecimal;
 
-@Data
+@Getter
+@AllArgsConstructor
 public class LimiteCreditoDTO {
     private String clienteId;
+    @JsonFormat(shape = JsonFormat.Shape.STRING, pattern = "#0.00")
     private BigDecimal limiteCredito;
     private String moeda;
+    @JsonFormat(shape = JsonFormat.Shape.STRING, pattern = "#0.00")
     private BigDecimal taxaJuros;
-
-    public LimiteCreditoDTO(String clienteId, BigDecimal bigDecimal, String brl, BigDecimal bigDecimal1) {
-    }
 }
